2012-05-22 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-05-09
	* keeping raw cell occupied during processing of Lumi message

2011-06-27  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-08
	* always return 1 from fillRawData for Event type (>0 only checked)

2011-05-11  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-07
	* added cross checks of event type for special events

2011-04-15  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-06
	* change fatal exception to error message and recall 
	
2011-04-13  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-05 (V01-05-04 already used)
	* throw fatal exception when receiving EOL with ls = 0

2010-05-17  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-03 (V01-05-02 already used)
	* issue stop only on STOP event (EMPTY event generates error message)
	
2010-02-02  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-01
	* Merge branch mods into 350

2010-01-20  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-00-01
	* do not set evtstate to processing for LUMISECTION events

2010-01-12  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-00-00
	* End-of-lumisection event signal to EP - backport for 333

2010-01-11  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-05-00
	* End-of-lumisection event signal to EP
	
2009-10-19  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-04-01
	* do not attach shared memory in constructor (for use with MPEP)
	
2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-04-00
	* implement DaqBaseReader::setRunNumber introduced in
	IORawData/DaqSource V01-06-17.

2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-03-00
	* add Kurt's changes
	* write the process id to the error event record in shared memory

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-02-00
	* if we are still attached to shm when the destructor hits, send